--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn {
+    @apply bg-black text-white py-2 px-4 rounded-lg font-medium inline-flex items-center tracking-tight justify-center;
+  }
+
+  .btn-primary {
+    @apply bg-black text-white;
+  }
+  .btn-text {
+    @apply bg-transparent text-black;
+  }
+}
