mobile view of productshowcase

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,3 +17,7 @@
 .logo-ticker {
   @apply h-8 w-auto;
 }
+
+.tag {
+  @apply text-sm inline-flex border border-[#222]/10 px-3 py-1 rounded-lg tracking-tight;
+}
