--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,11 +13,22 @@
   .btn-text {
     @apply bg-transparent text-black;
   }
-}
-.logo-ticker {
-  @apply h-8 w-auto;
-}
 
-.tag {
-  @apply text-sm inline-flex border border-[#222]/10 px-3 py-1 rounded-lg tracking-tight;
+  .logo-ticker {
+    @apply h-8 w-auto;
+  }
+
+  .tag {
+    @apply text-sm inline-flex border border-[#222]/10 px-3 py-1 rounded-lg tracking-tight;
+  }
+  .section-title {
+    @apply text-center font-bold text-3xl md:text-[54px] md:leading-[60px] tracking-tighter bg-gradient-to-b from-black to-[#001E80] text-transparent bg-clip-text;
+  }
+
+  .section-description {
+    @apply text-center text-[22px] leading-[30px] tracking-tight text-[#010D3E];
+  }
+  .section-heading {
+    @apply max-w-[540px] mx-auto;
+  }
 }
